basic works, back to full html...

--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-hello world
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset=utf-8 />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>File upload Example</title>
+  <style>
+  </style>
+</head>
+<body>
+  <p><img alt="Image of a smiley face" src="http://127.0.0.1:5000/python/introduction/installing%20python/drawing.svg"/></p>
+</body>
+</html>
