--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
   </style>
 </head>
 <body>
-  <p><img alt="Image of a smiley face" src="http://127.0.0.1:5000/python/introduction/installing%20python/drawing.svg"/></p>
+  <p><img alt="Image of a smiley face" src="https://dev.handbook.dev/python/introduction/installing%20python/drawing.svg"/></p>
 </body>
 </html>
